erDiagram
    rooms ||--o{ reservations : "booking"
    rooms ||--o{ housekeeping_tasks : "task target"
    rooms ||--o{ billing_items : "service line"
    custom_room_types ||..o{ rooms : "categorizes<br/>(soft ref by name)"

    guests ||--o{ reservations : "books"
    guests ||--o{ billing_items : "billed to"

    reservations ||--o{ payments : "settled by"
    reservations ||--o{ billing_items : "items"
    reservations ||--o{ deposits : "deposit"
    reservations ||--o{ invoices : "invoiced"

    profiles ||--o{ deposits : "collected by"
    profiles ||--o{ invoices : "created by"

    roles ||--o{ user_roles : "assigned"
    user_roles }o--|| profiles : "user"

    staff_members ||--o{ housekeeping_tasks : "assigned"

    inventory_items ||--o{ inventory_transactions : "stock change"
    inventory_items ||--o{ inventory_purchase_order_items : "ordered"
    inventory_suppliers ||--o{ inventory_purchase_orders : "supplies"
    inventory_purchase_orders ||--o{ inventory_purchase_order_items : "lines"

    Chat ||--o{ ai_messages : "messages"

    rooms {
        uuid id PK
        varchar number
        varchar type "soft ref→custom_room_types.name"
        int floor
        numeric base_price
        varchar status
        text image_url "Supabase Storage URL"
        timestamptz created_at
    }

    custom_room_types {
        bigint id PK
        varchar name UK
        text description
        numeric base_price
        int max_occupancy
        numeric room_size
        varchar bed_configuration
        jsonb amenities
        jsonb images "default per-type"
        jsonb features
        boolean is_active
    }

    guests {
        uuid id PK
        varchar full_name "NOT NULL"
        varchar email
        varchar phone "DB nullable / UI required"
        text address
        varchar id_number "opsional - saat check-in"
        varchar nationality
        uuid user_id FK
    }

    reservations {
        uuid id PK
        varchar booking_id
        varchar booking_reference
        uuid guest_id FK
        varchar guest_name "denormalized"
        varchar guest_email "denormalized"
        varchar guest_phone "denormalized"
        uuid room_id FK
        varchar room_number "denormalized"
        varchar room_type "denormalized"
        date check_in
        date check_out
        int adults
        int children
        int guest_count
        numeric room_rate
        numeric room_total
        numeric total_amount
        numeric total_price "BOTH total_amount & total_price ada"
        varchar status "pending|confirmed|checked-in|checked-out|cancelled|no_show"
        varchar payment_status
        boolean breakfast_included
        int breakfast_pax
        numeric breakfast_price
        numeric breakfast_total
        text notes "BUKAN special_requests; tidak ada created_by"
        timestamptz actual_check_in
        timestamptz actual_check_out
    }

    payments {
        uuid id PK
        uuid reservation_id FK
        numeric amount
        varchar payment_method
        timestamptz payment_date
        text transaction_id
    }

    invoices {
        bigint id PK
        text invoice_number
        uuid reservation_id FK
        uuid guest_id
        numeric subtotal
        numeric tax_amount
        numeric total_amount
        varchar status
        uuid created_by FK
    }

    billing_items {
        bigint id PK
        uuid reservation_id FK
        uuid room_id FK
        uuid guest_id FK
        text item_name
        text category
        int quantity
        numeric unit_price
        numeric total_price
    }

    deposits {
        bigint id PK
        uuid reservation_id FK
        numeric amount
        varchar status
        uuid collected_by FK
        uuid refunded_by FK
    }

    profiles {
        uuid id PK
        uuid user_id
        text employee_id
        text full_name
        text role
        boolean is_active
    }

    roles {
        uuid id PK
        text name
        text display_name
        jsonb permissions
    }

    user_roles {
        uuid id PK
        uuid user_id FK
        uuid role_id FK
    }

    housekeeping_tasks {
        int id PK
        uuid room_id FK
        int staff_id FK
        varchar task_type
        varchar status
        varchar priority
    }

    staff_members {
        int id PK
        varchar full_name
        varchar role
        boolean is_active
    }

    inventory_items {
        bigint id PK
        text name
        text category
        int current_stock
        int min_stock
        numeric unit_cost
    }

    inventory_suppliers {
        bigint id PK
        text name
        text email
    }

    inventory_transactions {
        bigint id PK
        bigint item_id FK
        varchar transaction_type
        int quantity
    }

    inventory_purchase_orders {
        bigint id PK
        text po_number
        bigint supplier_id FK
        text status
        numeric total_amount
    }

    inventory_purchase_order_items {
        bigint id PK
        bigint po_id FK
        bigint item_id FK
        numeric quantity_ordered
        numeric unit_cost
    }

    Chat {
        uuid id PK
        uuid user_id
        jsonb messages
        timestamptz created_at
    }

    ai_messages {
        uuid id PK
        uuid chat_id FK
        text role
        jsonb content
    }
